# gutzwiller

./: .gitignore  CMakeLists.txt  CombinedSolver.cpp  CombinedSolver.h  GutzwillerSolver.cpp  GutzwillerSolver.h  LambdaSolver.cpp  LambdaSolver.h  Model.cpp  Model.h  MultirootSolver.cpp  MultirootSolver.h  README.md  RhoSolver.cpp  RhoSolver.h  const_functions.cpp  lambda_functions.cpp  main.cpp  model_functions.cpp  rho_functions.cpp  rho_lambda_eta_functions.cpp
python/: Explorer.py  Explorer2D.py  Gutzwiller.pyx  compile.sh  example.py  setup.py
